# HyperZ

./: CMakeLists.txt  HyperX.sln  HyperZ.sln  README.md
.github/workflows/: build.yml
include/: config.h  config.hpp
src/: HyperZ.vcxproj  HyperZ.vcxproj.filters  vec2.c  vec3.cpp
vs/: HyperX.vcxproj  HyperX.vcxproj.filters  HyperZ.vcxproj  HyperZ.vcxproj.filters
